Fix text wrapping in sidebar tabs

--- a/static/styles/forms.less
+++ b/static/styles/forms.less
@@ -101,11 +101,13 @@ form.loading button[type="submit"] {
 
 .toggle a {
   display: block;
-  padding: 2px 6px 1px;
+  padding: 7px 6px 6px;
   color: #999;
   border-bottom: 2px solid transparent;
   transition: color .2s, border .2s;
   font-size: 16px;
+  text-align: center;
+  line-height: 1;
 
   &.active {
     color: black;
